# open_bus_tools

./: .env_example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: FASTSim_py_veh_db.csv  cleaned_sources.csv  manhattan.csv  more_gtfs_sources.csv  orange_county.csv
notebooks/: create_drive_cycle.ipynb  cycle_sources.ipynb  download_gtfsrt.ipynb  estimate_energy_use.ipynb  explore_data.ipynb  explore_drive_cycles.ipynb  explore_inference.ipynb  explore_inputs.ipynb  explore_other_cities.ipynb  explore_results.ipynb  explore_system_energy.ipynb  kalman.ipynb  multicity_tuning.ipynb  network_energy.ipynb  random_figs.ipynb  redo_data_files.ipynb  testing_fastsim.ipynb  traveltime_inputs.ipynb  traveltime_results.ipynb
obt/: data_utils.py  deeptte_utils.py  gps_utils.py  model_utils.py  plot_utils.py  shape_utils.py
openbustools/: data_utils.py  plotting.py  spatial.py  standardfeeds.py  trackcleaning.py
scripts/: download_dem.py  download_osm.py  download_realtime_data.py  download_s3_data.py  fit_heuristics.py  get_spatial_embeddings.py  process_data.py  run_energy_analysis.py  run_experiments.py  run_heuristics.py  run_models_kcm.sh  run_multicity_tuning.py  run_one_model.py  run_preparation.py  scrape_oba.py  srai_test.py  summarize_kcm_to_s3.py  summarize_nwy_to_s3.py  train_embeddings.py  train_heuristics.py  train_model.py  tune_model.py
web_scraper/: crontab_jobs.txt  scrape_entur.py  scrape_oba.py  scrape_utils.py  summarize_kcm_to_s3.py  summarize_nwy_to_s3.py
webscraper/: collect_realtime.py  collect_static.py  crontab_jobs.txt  (+12 more)
(+60 files in other folders)
