[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open_bus_tools"
version = "0.0.1"
authors = [
  { name="Zack Aemmer", email="zae5op@gmail.com" },
]
description = "Tools for open bus data collection, travel time prediction, energy consumption and visualization."
readme = "README.md"
requires-python = ">=3.9.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zackAemmer/open_bus_tools"
"Bug Tracker" = "https://github.com/zackAemmer/open_bus_tools/issues"